add update endpoint for activity